--- a/portfolio/src/components/work/WorkStyle.css
+++ b/portfolio/src/components/work/WorkStyle.css
@@ -29,6 +29,11 @@
     font-family: "Nunito Sans", sans-serif;
 }
 
+.experience-info {
+    /* font-size: 20px; */
+    font-size: 1.4vh;
+}
+
 .tech-chip {
     margin: 2px;
 }
@@ -38,6 +43,10 @@
         height: 100vh;
         width: 100vw;
     }
+
+    .experience-info {
+        font-size: 14px;
+    }
 }
 
 @media screen and (max-width: 500px) {
@@ -45,5 +54,9 @@
         display: flex;
         flex-direction: column;
         width: 100vw;
+    }
+
+    .experience-info {
+        font-size: 13px;
     }
 }
